Windows11Style: rework color handling for Checkbox/Radiobutton/Button

Rework the color handling for CheckBox/Radiobutton and Buttons to match
the WinUI3 style.

Fixes: QTBUG-139202
Fixes: QTBUG-138094
Change-Id: I874e096a78fcf4f92eeac586517b0b987bdd4e38
Reviewed-by: Wladimir Leuschner <wladimir.leuschner@qt.io>
(cherry picked from commit 95d784cca44928292858fc80539bbc854be28862)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>